--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -23,7 +23,7 @@ open HIP Repository, managed by the Helium Foundation on behalf of the community
 Users participate in network-wide token holder voting. You must have tokens to vote on Helium
 Improvement Proposals. The Helium Network and subNetworks vote with three tokens: HNT, IOT, and
 MOBILE. These tokens do not inherently provide governance rights and privileges and must be locked,
-in a method called Staking, to create a user’s voting power. Voting power is a multiplication of
+in a method called Staking, to create a user's voting power. Voting power is a multiplication of
 tokens staked and the time duration of staking. Staking aligns a user with the long-term success of
 building a decentralized wireless network.
 
@@ -43,7 +43,7 @@ Anyone can create a HIP by submitting a Pull Request in the HIP Github Repositor
 Ideas often are sparked through community discussion in the Official Helium Discord, which is
 managed and owned by the Helium Foundation. The appropriate channel for new HIP ideas is
 #hip-discussion. After an initial discussion to vet an idea, HIP Authors make a copy (“fork”) of the
-HIP Repository and create a new one, titled with a name and ‘.md’ to designate a Markdown file. All
+HIP Repository and create a new one, titled with a name and '.md' to designate a Markdown file. All
 instructions are provided in the format from the HIP Template within the repository. This new file
 will be the basis of their Helium Improvement Proposal.
 
@@ -88,58 +88,64 @@ additional subject matter experts.
 3. **Proposal Writing:** The author of the idea prepares a Helium Improvement Proposal (HIP) using
    the provided markdown template. The template can be adapted to suit the information required to
    illustrate an idea.
-   - Author is ready to draft a HIP.
-   - Author seeks out the HIP Template in HIP 7 (also located in the Discussion tab of the HIP
-     Repository).
-   - Author drafts a HIP within the template.
-   - Author makes changes to the template as needed to craft their argument.
-   - During drafting, Author may seek other information and knowledge to craft their proposal.
-     - Author may seek feedback or input from collaborators.
-     - Author may seek feedback or input from Helium Foundation
+
+- Author is ready to draft a HIP.
+- Author seeks out the HIP Template in HIP 7 (also located in the Discussion tab of the HIP
+  Repository).
+- Author drafts a HIP within the template.
+- Author makes changes to the template as needed to craft their argument.
+- During drafting, Author may seek other information and knowledge to craft their proposal.
+- Author may seek feedback or input from collaborators.
+- Author may seek feedback or input from Helium Foundation
+
 4. **Pull Request Submission:** The Author forks the Helium GitHub repository, adds the HIP file
    with a title (without allocating a number), commits the changes, and submits a pull request. –
-   see step-by-step guide to using Github [here]().
-   - Author navigates to Github in the web or desktop application.
-   - Author forks the Helium HIP Repository.
-   - Author creates a new branch to submit changes to.
-   - Author inputs their HIP as a new file within the branch.
-   - Author submits a branch as a pull request to the helium/hip repository.
+   see step-by-step guide to using Github [here](/write-a-hip).
+
+- Author navigates to Github in the web or desktop application.
+- Author forks the Helium HIP Repository.
+- Author creates a new branch to submit changes to.
+- Author inputs their HIP as a new file within the branch.
+- Author submits a branch as a pull request to the helium/hip repository.
+
 5. **HIP Review:** A HIP Editor reviews the submitted pull request. They check for adherence to the
    outlined standards, focusing on formatting and structure rather than the proposal's substance.
-   - HIP Editor received GitHub notification of new PR.
-   - HIP Editor reads the draft HIP.
-   - HIP Editor adds edits and comments for clarity, consistency, grammar, punctuation, formatting
-     and viability.
-   - HIP Editor submits edits to Author for revision.
-   - HIP Editor requests changes.
-   - At the same time, the HIP Editor begins a conversation with the HIP Author on Discord or Github
-     to make sure they are available for questions and engage the Author if more clarity or revision
-     is needed.
-   - HIP Editors define the Voting Requirements for the HIP.
-   - If all Edits are made and accepted, the HIP will be merged.
-   - If all Edits are not made and accepted, the HIP will remain in Draft as a PR.
-   - Once merged into the main HIP Repository, a HIP Editor creates an issue ticket, adds basic
-     information about the HIP, tags, and updates the README file with status.
+
+- HIP Editor received GitHub notification of new PR.
+- HIP Editor reads the draft HIP.
+- HIP Editor adds edits and comments for clarity, consistency, grammar, punctuation, formatting and
+  viability.
+- HIP Editor submits edits to Author for revision.
+- HIP Editor requests changes.
+- At the same time, the HIP Editor begins a conversation with the HIP Author on Discord or Github to
+  make sure they are available for questions and engage the Author if more clarity or revision is
+  needed.
+- HIP Editors define the Voting Requirements for the HIP.
+- If all Edits are made and accepted, the HIP will be merged.
+- If all Edits are not made and accepted, the HIP will remain in Draft as a PR.
+- Once merged into the main HIP Repository, a HIP Editor creates an issue ticket, adds basic
+  information about the HIP, tags, and updates the README file with status.
+
 6. **Discussion and Approval:** The HIP enters the discussion phase, during which comments and
    feedback are provided on the associated GitHub issue or Helium Discord Community. Community calls
    are scheduled to discuss the HIP. Rough consensus and motivation towards making timely changes
    are used to achieve approval to move towards proposal voting.
-   - HIP Editors have finished merging the file into the main Repo and move on to opening
-     discussion.
-   - HIP Editors create a new channel in Discord HIP Editors title the channel, add essential
-     information, and begin the discussion.
-   - HIP Editors or Community Managers make an announcement letting the community know the HIP is
-     live and open for discussion.
-   - From here on, HIP Editors monitors discussion.
-   - HIP Editors engage Authors to present HIPs at the following upcoming Community Call.
-   - HIP Editors monitor discussions for rough consensus.
-   - HIP Editors may use non-binding Temperature Check votes to determine if rough consensus is
-     achieved to move the HIP to a vote.
-   - If rough consensus is achieved, HIP Editors inform Helium Core Devs of a proposal that requires
-     voting in Realms.
-   - HIP Editors prepare the vote, including proposal descriptions, announcements to the community,
-     and informing the Author.
-   - Helium Core Devs make the proposal available for the community to vote on in Realms.
+
+- HIP Editors have finished merging the file into the main Repo and move on to opening discussion.
+- HIP Editors create a new channel in Discord HIP Editors title the channel, add essential
+  information, and begin the discussion.
+- HIP Editors or Community Managers make an announcement letting the community know the HIP is live
+  and open for discussion.
+- From here on, HIP Editors monitors discussion.
+- HIP Editors engage Authors to present HIPs at the following upcoming Community Call.
+- HIP Editors monitor discussions for rough consensus.
+- HIP Editors may use non-binding Temperature Check votes to determine if rough consensus is
+  achieved to move the HIP to a vote.
+- If rough consensus is achieved, HIP Editors inform Helium Core Devs of a proposal that requires
+  voting in Realms.
+- HIP Editors prepare the vote, including proposal descriptions, announcements to the community, and
+  informing the Author.
+- Helium Core Devs make the proposal available for the community to vote on in Realms.
 
 Vet an idea in the community by joining the #hip-discussion channel on Discord:
 www.discord.com/invite/helium/gg
