--- a/docs/governance/phase-3.mdx
+++ b/docs/governance/phase-3.mdx
@@ -8,7 +8,9 @@ image:
 slug: /governance/phase-3
 ---
 
-import useBaseUrl from '@docusaurus/useBaseUrl'## Phase 3: Realms on Solana
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+## Phase 3: Realms on Solana
 
 Realms is the most recent and current phase of Helium Governance. Realms is a Solana native tool for
 decentralized governance. This tool replaces the previously used Helium Vote system. It is the
