--- a/docs/governance/voting.mdx
+++ b/docs/governance/voting.mdx
@@ -17,7 +17,7 @@ Discord. Temperature Checks allow the community and all stakeholders discussing 
 readiness or suggest more time for discussion. HIPs progress through different stages, including
 Draft, In Discussion, Approved, Deployed, or Rejected.
 
-## Read the HIP 7 Process here: https://github.com/helium/HIP/blob/main/0007-managing-hip-process.md
+Read the HIP 7 Process here: https://github.com/helium/HIP/blob/main/0007-managing-hip-process.md
 
 ## Blockchains + On-Chain Voting,
 
@@ -76,7 +76,9 @@ lockup. In the Helium Network and subNetworks, users can stake tokens for up to 
 allows users to make a commitment to the future, creating long-term alignment to increase the value
 of the Network.
 
-::: note How to stake tokens
+::: note
+
+How to stake tokens
 
 For a full walkthrough on how to stake your tokens to the Helium Network or one of its subNetworks,
 see the [Realms Staking][voting-power] guide.
