--- a/docs/use-the-network/roaming.mdx
+++ b/docs/use-the-network/roaming.mdx
@@ -10,28 +10,28 @@ slug: /use-the-network/roaming
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Helium Roaming Services enables public and private LoRaWAN network providers around the world to
+Helium Roaming Services enables public and private LoRaWAN Network providers around the world to
 leverage Helium’s ubiquitous coverage.
 
-With over 630K Hotspots in 166 countries and growing, the network sees a massive amount of
-non-Helium packets. When network providers enter a roaming partnership with Helium, this traffic can
+With over 993K Hotspots in 190 countries and growing, the Network sees a massive amount of
+non-Helium packets. When Network providers enter a roaming partnership with Helium, this traffic can
 be forwarded via the Helium Network to partners, increasing their level of service and coverage.
 
-Any compatible device can send data to their home network through Helium-compatible Hotspots without
+Any compatible device can send data to their Home Network through Helium-compatible Hotspots without
 the need for device configurations or firmware updates.
 
 ## Getting Started
 
-- **Create an Account**- Contact a Helium Network Advisor to create the initial Helium Roaming
+- **Create an Account** - Contact a Helium Network Advisor to create the initial Helium Roaming
   Services account (sales@nova-labs.com). Initial setup requires an Organization name, and an email
   address for the administrator. As part of the initial account creation process, Net ID ownership
   must be verified for the roaming partner.
-- **Add Users**- An administrator can add other user accounts with various roles as needed.
-- **Purchase Data Credits**- Data Credits (DCs) are needed to pay for packets sent on the Helium
-  network and can be purchased with a credit card or burning HNT.
-- **Configure Network Integration**- Specify the home network server address and port, input roaming
+- **Add Users** - An administrator can add other user accounts with various roles as needed.
+- **Purchase Data Credits** - Data Credits (DCs) are needed to pay for packets sent on the Helium
+  Network and can be purchased with a credit card or burning HNT.
+- **Configure Network Integration** - Specify the Home network Server address and port, input roaming
   device join credentials, and define how many packets to purchase for devices.
-- **Set up Alerts**- Set up email alerts to send to different user roles based on a number of
+- **Set up Alerts** - Set up email alerts to send to different user roles based on a number of
   conditions including Data Credit balance, user management, or payment methods.
 
 ## Users & Organizations
@@ -52,7 +52,7 @@ User roles include:
 
 - On Console navigate to the **Users** page, and click **+ Add User**. A pop-up appears.
 - Type the email of the new user, and select their desired access level.
-- Hit **Submit**. An emial invitation is sent that allows a user to join the organization.
+- Hit **Submit**. An email invitation is sent that allows a user to join the organization.
 
 ### Managing Organizations
 
@@ -70,13 +70,13 @@ is a virtual container with its own users, Data Credit balance, and configuratio
 
 ## Data Credits
 
-Data Credits (DCs) are needed to pay for packets sent on the Helium network. Every 24 bytes sent in
-a packet costs 1 DC which equals $.00001.
+Data Credits (DCs) are needed to pay for packets sent on the Helium Network. Every 24 bytes sent in
+a packet costs 1 DC which equals $0.00001.
 
 ### Purchasing Data Credits
 
 Obtaining Data Credits is the same as on the Helium Console focused on device management and
-onboarding. Users can use a credit card (recommended method) and sent up a recurring payment or burn
+onboarding. Users can use a credit card (recommended method) and set up a recurring payment or burn
 HNT. For a video tutorial of how to purchase Data Credits on Console, check out our Tips & Tricks
 video [here](https://youtu.be/jyMGLymuOCE).
 
@@ -114,7 +114,7 @@ Join credentials can be added using multiple methods. Click **Configuration**, a
 
 - **Add an individual device**: choose **+Add Join Credential** and enter the device DevEUI and APP
   EUI
-- **Import devices with a CSV file**: choose **use CSV File**. To structure the CSV file add
+- **Import devices with a CSV file**: choose **use CSV File**. To structure the CSV file, add
   app_eui, dev_eui in the header row, followed by rows of the corresponding values.
 - **Use a wildcard**: Rather than adding each device, DevEUI’s mapped to a single AppEUI can be
   added using an asterisk wildcard `*`. Choose **+Add Join Credential** and enter `*` for the DevEUI
@@ -127,7 +127,7 @@ redundancy and location triangulation purposes.
 
 To enable multiple packet purchase, click **Configuration**, and enter the number of desired
 packets. Note: additional packets can only be purchased if multiple Hotspots "hear" and send the
-same packet. By default only `1` packet is purchased.
+same packet. By default, only `1` packet is purchased.
 
 ## Alerts
 
