--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -8,7 +8,7 @@ image: https://docs.helium.com/img/link-image.png
 slug: /use-the-network/devices
 ---
 
-The Helium network supports any LoRaWAN capable device meeting the v1.0.2, v1.0.3, or v1.0.4
+The Helium Network supports any LoRaWAN capable device meeting the v1.0.2, v1.0.3, or v1.0.4
 specification.
 
 :::info
@@ -25,8 +25,8 @@ companies offering complete end-to-end device solutions.
 
 ### Ready to Use Devices
 
-For those looking to create a solution with purpose built end devices, our ready to use section
-provides device references and onboarding guides for some of the most well known manufactures.
+For those looking to create a solution with purpose-built end devices, our ready to use section
+provides device references and onboarding guides for some of the most well-known manufactures.
 
 [Browse Devices](/use-the-network/devices/ready-to-use)
 
