--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-geolocation-module.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-geolocation-module.mdx
@@ -33,8 +33,8 @@ production.
 
 ### Resources
 
-- [Product Page](https://actilitysa.sharepoint.com/:b:/t/aby/EYOI_kuaGtZAi8LYl_ooalwBNW6ffv27k1ZOHqWMmtNccA?e=xqOvOq)
-- [Datasheet](https://actilitysa.sharepoint.com/:b:/t/aby/EYOI_kuaGtZAi8LYl_ooalwBNW6ffv27k1ZOHqWMmtNccA?e=xqOvOq)
+- [Product Page](https://www.abeeway.com/abeeway-geolocation-module/)
+- [Datasheet](https://www.abeeway.com/wp-content/uploads/2022/04/Abeeway_Geolocation-module-data-sheet_2022-v05.pdf)
 - [Reseller - Actility](https://www.actility.com/)
 
 ### Specifications
@@ -42,7 +42,7 @@ production.
 #### Sensors:
 
 - accelerometer
-- gps
+- GPS
 - temperature
 
 #### Dimensions:
