--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-industrial-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-industrial-tracker.mdx
@@ -28,15 +28,15 @@ heavy-duty assets, inventory or livestock, taking advantage of its extraordinary
 ### Resources
 
 - [Product Page](https://www.abeeway.com/industrial-tracker/)
-- [Datasheet](https://www.abeeway.com/wp-content/uploads/2020/11/Abeeway_Products_Industrial_07_DIGITAL.pdf)
-- [Reseller - Actility](https://market.thingpark.com/searchanise/result?q=industrial+tracker)
+- [Datasheet](https://www.abeeway.com/wp-content/uploads/2023/05/Abeeway_Products_Industrial_2022-V1.6.pdf)
+- [Reseller - Actility](https://market.thingpark.com/abeeway-industrial-tracker-v2.html)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- gps
+- GPS
 - temperature
 
 #### Dimensions:
