--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-compact-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-compact-tracker.mdx
@@ -16,7 +16,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Abeeway Compact Tracker
 
-Higly versatile multi-mode tracker with a compact and robust form factor, designed to resist harsh
+Highly versatile multi-mode tracker with a compact and robust form factor, designed to resist harsh
 surroundings enabling you to perform seamless asset tracking and management in any industrial
 environment – whether it’s for heavy-duty assets or small equipment, taking advantage of its long
 battery autonomy.
@@ -28,15 +28,15 @@ battery autonomy.
 ### Resources
 
 - [Product Page](https://www.abeeway.com/compact-tracker/)
-- [Datasheet](https://www.abeeway.com/wp-content/uploads/2020/10/Abeeway_Compact-data-sheet_08.pdf)
-- [Reseller - Actility](https://market.thingpark.com/catalog/product/view/id/11554/s/abeeway-compact-tracker/?___store=default)
+- [Datasheet](https://www.abeeway.com/wp-content/uploads/2023/05/Abeeway_Compact-data-sheet_2023-v2.0.pdf)
+- [Reseller - Actility](https://market.thingpark.com/abeeway-compact-tracker.html)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- gps
+- GPS
 - temperature
 
 #### Dimensions:
