--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
@@ -5,8 +5,8 @@ pagination_label: Abeeway Micro Tracker
 sidebar_label: Abeeway Micro Tracker
 description:
   Multi-mode, versatile and multi-purpose tracker. With its small size and long battery life, it is
-  the ideal product for numerous tracking applications things of value, people or pets. At the touch
-  of a button, you can have access to a variety of functionalities personalized for your needs
+  the ideal product for numerous tracking applications of things of value, people or pets. At the touch
+  of a button, you can have access to a variety of functionalities personalized for your needs.
 image: img/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.png
 slug: /use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker
 ---
@@ -26,15 +26,15 @@ of a button, you can have access to a variety of functionalities personalized fo
 ### Resources
 
 - [Product Page](https://www.abeeway.com/micro-tracker/)
-- [Datasheet](https://www.abeeway.com/wp-content/uploads/2020/10/20200825_Abeeway_Products_Micro_17.pdf)
-- [Reseller - Actility](https://market.thingpark.com/abeeway-microtracker-abw00200-eu868.html?___store=default)
+- [Datasheet](https://www.abeeway.com/wp-content/uploads/2023/05/Abeeway_Products_Micro_B_2022-V2.6.pdf)
+- [Reseller - Actility](https://market.thingpark.com/abeeway-micro-tracker-v3.html)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- gps
+- GPS
 - temperature
 
 #### Dimensions:
@@ -51,6 +51,7 @@ of a button, you can have access to a variety of functionalities personalized fo
 
 - type: Lithium Polymer
 - replaceable: False
+- rechargeable: 3.7V / 0.45 Ah
 
 ---
 
