--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-smart-badge.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-smart-badge.mdx
@@ -18,39 +18,40 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Portable multi-mode tracker in an ID card format. This device is ideal for tracking, zone
 notification and monitoring of workforce safety and security. Simple to use, a single button gives
-you access to the numerous functionalities you may personalize for your needs, e.g. as a Panic/SOS
-Button. A local zoning feature is able to signal danger zones with a 80db buzzer
+you access to the numerous functionalities you may personalize for your needs, e.g., as a Panic/SOS
+Button. A local zoning feature is able to signal danger zones with an 80db buzzer.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/abeeway/abeeway-smart-badge.png')} />
 
 ### Resources
 
 - [Product Page](https://www.abeeway.com/smart-badge/)
-- [Datasheet](https://www.abeeway.com/wp-content/uploads/2020/10/Abeeway_Badge-data-sheet_12_DIGITAL.pdf)
-- [Reseller - Actility](https://market.thingpark.com/catalog/product/view/id/11550/s/abeeway-smart-badge/?___store=default)
+- [Datasheet](https://www.abeeway.com/wp-content/uploads/2023/05/Abeeway_Badge-data-sheet_2022-v3.1B.pdf)
+- [Reseller - Actility](https://market.thingpark.com/abeeway-smart-badge.html)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- gps
+- GPS
 - temperature
 
 #### Dimensions:
 
-- width: 65 mm
-- length: 90 mm
+- width: 68 mm
+- length: 104 mm
 - height: 11 mm
 
 #### Weight:
 
-- 80 grams
+- 64 grams
 
 #### Battery:
 
 - type: Lithium Polymer
 - replaceable: False
+- rechargeable: 3.7V / 1.3 Ah
 
 ---
 
