--- a/docs/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue.mdx
+++ b/docs/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue.mdx
@@ -4,8 +4,8 @@ title: Boatofficer Blue
 pagination_label: Boatofficer Blue
 sidebar_label: Boatofficer Blue
 description:
-  With BoatOfficer Blue you can monitor your boat, while you’re not around. E.g. position, battery
-  voltage and temperature are send via TheThingsNetwork to the BoatOfficer app on your phone. Events
+  With BoatOfficer Blue you can monitor your boat, while you’re not around. E.g., position, battery
+  voltage and temperature are sent via TheThingsNetwork to the BoatOfficer app on your phone. Events
   like water ingress detection trigger an immediate push notification.
 image: img/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue_leftside.png
 slug: /use-the-network/devices/ready-to-use/boatofficer/boatofficerblue
@@ -28,14 +28,14 @@ like water ingress detection trigger an immediate push notification.
 ### Resources
 
 - [Product Page](https://www.boatofficer.com/products/BoatOfficerBlue)
-- [Reseller - BoatOfficer Webshop](https://shop.boatofficer.com)
+- [Reseller - BoatOfficer Webshop](https://shop.boatofficer.com/en/)
 
 ### Specifications
 
 #### Sensors:
 
 - button
-- gps
+- GPS
 - temperature
 - voltage
 
