--- a/docs/use-the-network/devices/ready-to-use/bosch/tps110.mdx
+++ b/docs/use-the-network/devices/ready-to-use/bosch/tps110.mdx
@@ -12,36 +12,37 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Parking Lot Sensor
 
-The wireless smart parking sensor for detecting parking space occupancy
+The wireless smart parking sensor for detecting parking space occupancy.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/bosch/tps110.jpg')} />
 
 ### Resources
 
-- [Product Page](https://www.bosch-connectivity.com/products/connected-mobility/parking-lot-sensor/)
-- [Datasheet](https://www.bosch-connectivity.com/media/product_detail_pls/parking-lot-sensor-datasheet.pdf)
+- [Product Page](https://www.bosch-connectivity.com/products/connected-mobility/parking-lot-sensor/downloads/)
+- [Datasheet](https://www.bosch-connectivity.com/media/product_detail_pls/cost_pls_product_data_sheet_en_v221130.pdf)
 - [Video](https://youtu.be/HYv50apV-jA)
+- [Manual](https://www.bosch-connectivity.com/media/product_detail_pls/pls_usermanual_2-0_en-de-fr-it-es-nl-da-pt-gr-ro.pdf)
 
 ### Specifications
 
 #### Sensors:
 
 - magnetometer
-- gps
+- GPS
 - temperature
 - radar
 
 #### Dimensions:
 
-- height: 30.5 mm
+- height: 30 mm
 
 #### Weight:
 
-- 191 grams
+- 215 grams
 
 #### Battery:
 
-- type: Lithium battery (Li-SOCI2)
+- type: Lithium battery (Li-SOCI2 / 3.6V / 1200 mAh)
 - replaceable: False
 
 ---
