--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
@@ -12,20 +12,21 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## LPN TD-1 Tracker
 
-Designed for LoRaWAN - Indoor/outdoor positioning on request with GPS or WiFi
+Designed for LoRaWAN - Indoor/outdoor positioning on request with GPS or Wi-Fi
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/comtac/lpn-td1-foto.jpg')} />
 
 ### Resources
 
 - [Product Page](https://www.comtac.ch/en/products/tracking/tracker/lpn-td-1-tracker.html)
+- [Video](https://www.youtube.com/watch?v=MYK1AK2qeBk)
 
 ### Specifications
 
 #### Sensors:
 
-- gps
-- wifi ssid
+- GPS
+- Wi-Fi SSID
 - temperature
 - battery
 
